--- a/index.html
+++ b/index.html
@@ -27,6 +27,6 @@
         <div class="pagination">
         </div>
     </div>
-    <script src="dragtest.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
