--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Slider</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="min.style.css">
 </head>
 <body>
     <!-- Слайдер -->
@@ -14,10 +14,13 @@
         </div>
 
         <!-- Кнопки навигации -->
-        <div class="buttons">
+        <div class="button-block button-block-prev">
             <button class="button prev">
                 <div class="arrow"></div>
             </button>
+        </div>
+        
+        <div class="button-block button-block-next">
             <button class="button next">
                 <div class="arrow"></div>
             </button>
